--- a/modulo01/aula05-tdd-project-pt03/package.json
+++ b/modulo01/aula05-tdd-project-pt03/package.json
@@ -10,13 +10,15 @@
     "test": "npx mocha -w --parallel \"./{,!(node_modules)/**/}*.test.js\"",
     "test-cov": "npx nyc npx mocha \"./{,!(node_modules)/**/}*.test.js\"",
     "test-cov2": "npx nyc mocha --no-parallel \"./{,!(node_modules)/**/}*.test.js\" --exit--check-leaks",
-    "seed": "node ./seed"
+    "seed": "node ./seed",
+    "start": "node ./src/service/api.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "faker": "^5.1.0"
+    "faker": "^5.1.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.7",
